Add tasks descriptions with TODO

--- a/src/app/task-list/task-list.component.html
+++ b/src/app/task-list/task-list.component.html
@@ -1,5 +1,6 @@
 <div>
   <div>No tasks to display. Please add a task.</div>
 
-  <!-- Add logic to render tasks here -->
+  <!-- TODO: Add logic to render tasks here -->
+  <!--  Check out css classes for elements in task-list.component.css-->
 </div>
