--- a/src/app/task-form/task-form.component.html
+++ b/src/app/task-form/task-form.component.html
@@ -1,13 +1,15 @@
-<form [formGroup]="taskForm" (ngSubmit)="onSubmit()">
+<form [formGroup]="taskForm">
   <div class="form-group">
-    <label for="title">Title</label>
-    <input id="title" formControlName="title" placeholder="Task title" required />
+    <label for="title" class="form-label">Title</label>
+    <input id="title" class="form-control" formControlName="title" placeholder="Task title"/>
+<!--    TODO: Add is-invalid class to inputs if they are invalid-->
   </div>
 
   <div class="form-group">
-    <label for="description">Description</label>
-    <input id="description" formControlName="description" placeholder="Task description" required />
+    <label for="description" class="form-label">Description</label>
+    <input id="description" class="form-control" formControlName="description" placeholder="Task description"/>
   </div>
 
-  <button type="submit">Add Task</button>
+  <button type="submit" (click)="onSubmit()">Add Task</button>
+<!--  TODO: disable submit button when form is invalid -->
 </form>
