--- a/src/app/task-form/task-form.component.scss
+++ b/src/app/task-form/task-form.component.scss
@@ -30,16 +30,19 @@ button[disabled] {
 .form-group {
   margin-bottom: 1rem;
 
-  label {
+  .form-label {
     display: block;
     font-weight: bold;
     margin-bottom: 0.5rem;
   }
 
-  input {
+  .form-control {
     width: 100%;
     padding: 0.5rem;
     border: 1px solid #ccc;
     border-radius: 4px;
+    &.is-invalid {
+      border-color: red;
+    }
   }
 }
