--- a/src/app/task-list/task-list.component.html
+++ b/src/app/task-list/task-list.component.html
@@ -1,6 +1,20 @@
 <div>
-  <div>No tasks to display. Please add a task.</div>
+<!--  <div>No tasks to display. Please add a task.</div>-->
 
   <!-- TODO: Add logic to render tasks here -->
-  <!--  Check out css classes for elements in task-list.component.css-->
+  <div class="task-list">
+    <div class="task">
+      <span class="task-title">Task 1</span>
+      <span class="task-description">Task 1 description</span>
+
+      <button class="task-delete">x</button>
+    </div>
+
+    <div class="task">
+      <span class="task-title">Task 2</span>
+      <span class="task-description">Task 2 description</span>
+
+      <button class="task-delete">x</button>
+    </div>
+  </div>
 </div>
