Updated README file with Interview Task Description

--- a/src/app/task-list/task-list.component.html
+++ b/src/app/task-list/task-list.component.html
@@ -1,7 +1,8 @@
 <div>
-<!--  <div>No tasks to display. Please add a task.</div>-->
+  <!--  Note: Use the following code snippet if there are no tasks yet: -->
+  <!--  <div>No tasks to display. Please add a task.</div>-->
 
-  <!-- TODO: Add logic to render tasks here -->
+  <!-- Note: Add logic to render tasks here: -->
   <div class="task-list">
     <div class="task">
       <span class="task-title">Task 1</span>
